# myconf

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  PRD.md  README.md  TECHNICAL.md  TODO.md  docker-compose.observability.yaml  docker-compose.yaml  docker-compose.yml  glama.json  justfile  livekit.Dockerfile  livekit.yaml  llms-full.txt  package-lock.json  package.json  pyproject.toml  run_server.py  setup.ps1  start.ps1  teleconference-mcp-backend.spec  turbo.json
.claude-plugin/: plugin.json
.github/workflows/: ci.yml
apps/: __init__.py
apps/agent/: .dockerignore  .env.example  Dockerfile  __init__.py  agent.py  contacts_cache.json  contacts_substrate.py  logic.py  memory_substrate.py  pytest.ini  requirements-dev.txt  requirements.docker.txt  requirements.txt  start.ps1  state_bus.py  transcription_substrate.py  vision_analyze.py
apps/agent/lancedb_data/codebase.lance/_transactions/: 0-80ef87e3-f41d-4c8f-bf14-afea2974bb0e.txn
apps/agent/lancedb_data/meeting_insights.lance/_transactions/: 0-d733f6a0-26b8-421a-bd1b-66db1ad0f225.txn  1-4b22d5fc-697b-49f4-a435-60062d8bf565.txn  2-a1e922ea-2d09-4163-968b-962ae584e43b.txn
apps/agent/lancedb_data/mission_logs.lance/_transactions/: 0-70aa6f64-6b4e-48a9-86b4-2ce6ebcdd41c.txn
apps/agent/lancedb_data/transcripts.lance/_transactions/: 0-0c518bd7-c5c9-4b35-99c8-ecac5e6c085b.txn  1-df96a9f9-d466-438c-90bf-2af1686821e7.txn
apps/agent/tests/: __init__.py  conftest.py  test_agent.py  test_contacts.py  test_memory.py  test_session.py
apps/web/: .gitignore  Dockerfile  auth.ts  lint-results.json  lint_output.txt  middleware.ts  package.json  playwright.config.ts  start.ps1  tsconfig.json  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/components/: Modal.test.tsx  Toggle.test.tsx
apps/web/__tests__/lib/: settings.test.ts  telemetry.test.ts  utils.test.ts
apps/web/app/: globals.css  layout.tsx  manifest.ts  page.tsx
apps/web/app/api/discovery/: route.ts
apps/web/app/api/egress/: route.ts
apps/web/app/api/files/: route.ts
apps/web/app/api/health/: route.ts
apps/web/app/api/meetings/: route.ts
apps/web/app/files/: page.tsx
apps/web/app/health/: page.tsx
apps/web/app/meetings/: page.tsx
apps/web/app/recordings/: page.tsx
apps/web/app/schedule/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/test/: page.tsx
apps/web/components/: AgentFleetPanel.tsx  AgentStatus.tsx  AppShell.tsx  BackgroundBlurToggle.tsx  ChatPanel.tsx  ContactPanel.tsx  ErrorBoundary.tsx  FileSharingPanel.tsx  HelpModal.tsx  LogViewer.tsx  MeetingIntelligencePanel.tsx  ReconnectionBanner.tsx  RecordingButton.tsx  RemoteAssistanceOverlay.tsx  RustDeskPanel.tsx  ScreenShareControl.tsx  ShareRoomModal.tsx  Sidebar.tsx  ThemeProvider.tsx  Topbar.tsx
apps/web/components/ui/: Modal.tsx  Toggle.tsx
apps/web/e2e/: dashboard.spec.ts  join-flow.spec.ts  multi-client.spec.ts  smoke.spec.ts
apps/web/lib/: discovery.ts  prejoin-validation.ts  settings.ts  telemetry.ts  toast.tsx
apps/web/playwright-report/: index.html
apps/web/test-results/: .last-run.json
docs/: ARCHITECTURE.md  FEATURES.md  INSTALL.md  LIVEKIT.md  USAGE.md  llms.txt
hooks/: hooks.json
infrastructure/grafana/dashboards/: provider.yml
infrastructure/loki/: loki-config.yml
infrastructure/prometheus/: prometheus.yml
infrastructure/promtail/: promtail-config.yml
myconf/: __main__.py  health.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
native/src/: backend.rs
native/windows/: hooks.nsh
scripts/: cua-nsis-config.json
teleconference_mcp/: __main__.py  health.py
tests/: conftest.py  health_prober.py  livekit_test.py  logic_test.py  mcp_test.py  test_mcp_discovery.py  test_meeting_intelligence.py  test_remoting_logic.py  test_stack.py  test_tools_conferencing.py  test_tools_diagnostics.py  test_tools_intelligence.py  test_tools_participants.py  test_tools_remoting.py  test_tools_rooms.py  test_tools_signaling.py
(+9 files in other folders)
