[project]
name = "myconf"
version = "0.1.0"
description = "AG-Visio video conferencing with AI agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.1",
    "livekit>=1.0.0",
    "lancedb>=0.17.0",
    "fastembed>=0.4.0",
    "pywinctl>=0.0.43",
    "pynput>=1.7.6",
    "pywin32>=306",
    "mss>=9.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "coverage>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
