[project]
name = "teleconference-mcp"
version = "0.1.0"
description = "Teleconference MCP — AI-powered video conferencing with LiveKit WebRTC, voice agent, and remote desktop control"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastmcp>=3.4.2,<4",
    "livekit>=1.0.0",
    "livekit-api>=1.0.0",
    "livekit-agents>=1.0.0",
    "livekit-plugins-openai>=0.9.0",
    "lancedb>=0.17.0",
    "fastembed>=0.4.0",
    "prefab-ui>=0.14.0",
    "pywinctl>=0.0.43; sys_platform == 'win32'",
    "pynput>=1.7.6; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "mss>=9.0.1; sys_platform == 'win32'",
    "aiohttp>=3.9.0",
    "ollama>=0.4.0",
    "redis>=5.0.0",
    "python-dotenv>=1.0.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=5.0.0",
    "coverage>=7.4.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
    "ty>=0.0.50",
]

[project.scripts]
teleconference-mcp = "teleconference_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "apps/agent/tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["teleconference_mcp", "packages", "apps/agent"]
omit = ["*/tests/*", "*/test_*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF"]
ignore = ["S101", "B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
